[gd_scene load_steps=8 format=3 uid="uid://bltajbfusfvpv"]

[ext_resource type="Texture2D" uid="uid://b5f0hnk3assl1" path="res://mesh_merge/texture/CC_Base_Body__0__Base Color.jpg" id="1_113of"]
[ext_resource type="Script" uid="uid://n5a4xj4xst2i" path="res://mesh_merge/mesh_merge_ds.gd" id="1_w016c"]
[ext_resource type="Texture2D" uid="uid://d2e4e27t5jvsy" path="res://mesh_merge/texture/CC_Base_Body__1__Base Color.jpg" id="2_w016c"]
[ext_resource type="ArrayMesh" path="res://mesh_merge/combined_assets/combined_mesh.tres" id="4_s8rtv"]

[sub_resource type="BoxMesh" id="BoxMesh_s8rtv"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2wds3"]
albedo_texture = ExtResource("1_113of")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wdc0k"]
albedo_texture = ExtResource("2_w016c")

[node name="mesh_merge" type="Node3D" node_paths=PackedStringArray("mesh_1", "mesh_2")]
script = ExtResource("1_w016c")
mesh_1 = NodePath("mesh_1")
mesh_2 = NodePath("mesh_2")
texture_1 = ExtResource("1_113of")
texture_2 = ExtResource("2_w016c")

[node name="mesh_1" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("BoxMesh_s8rtv")
surface_material_override/0 = SubResource("StandardMaterial3D_2wds3")

[node name="mesh_2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.739832, 0.390614, -0.583709)
visible = false
mesh = SubResource("BoxMesh_s8rtv")
surface_material_override/0 = SubResource("StandardMaterial3D_wdc0k")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.4201)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.83643, 5.2522)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = ExtResource("4_s8rtv")
